--- a/compact-table.html
+++ b/compact-table.html
@@ -32,10 +32,10 @@
 								<tr>
 									<td colspan=3 class="buffer">10 mins</td>
 								</tr>
-								<tr>
+								<tr class="thread">
 									<td>Go for a run</td>
-									<td>06:20 - 07:20</td>
-									<td>
+									<td class="duration">06:20 - 07:20</td>
+									<td class="status">
 										<a rel="tooltip" title="Like" class="table-action like" href="javascript:void(0)" title="Like">
 											<i class="fa fa-heart"></i>
 										</a>
@@ -50,10 +50,10 @@
 								<tr>
 									<td colspan=3 class="buffer">10 mins</td>
 								</tr>
-								<tr>
+								<tr class="thread">
 									<td>Take a shower</td>
-									<td>07:30 - 08:00</td>
-									<td>
+									<td class="duration">07:30 - 08:00</td>
+									<td class="status">
 										<a rel="tooltip" title="Like" class="table-action like" href="javascript:void(0)" title="Like">
 											<i class="fa fa-heart"></i>
 										</a>
@@ -68,10 +68,10 @@
 								<tr>
 									<td colspan=3 class="buffer">20 mins</td>
 								</tr>
-								<tr>
+								<tr class="thread">
 									<td>Commute to work</td>
-									<td>08:20 - 09:10</td>
-									<td>
+									<td class="duration">08:20 - 09:10</td>
+									<td class="status">
 										<a rel="tooltip" title="Like" class="table-action like" href="javascript:void(0)" title="Like">
 											<i class="fa fa-heart"></i>
 										</a>
@@ -86,10 +86,10 @@
 								<tr>
 									<td colspan=3 class="buffer">10 mins</td>
 								</tr>
-								<tr>
+								<tr class="weave">
 									<td>Placeholder for a Weave</td>
-									<td>09:20 - 16:00</td>
-									<td>
+									<td class="duration">09:20 - 16:00</td>
+									<td class="status">
 										<a rel="tooltip" title="Like" class="table-action like" href="javascript:void(0)" title="Like">
 											<i class="fa fa-heart"></i>
 										</a>
@@ -104,10 +104,10 @@
 								<tr>
 									<td colspan=3 class="buffer">30 mins</td>
 								</tr>
-								<tr>
+								<tr class="laser-donut">
 									<td>Placeholder for a Laser Donut Portion</td>
-									<td>16:30 - 20:30</td>
-									<td>
+									<td class="duration">16:30 - 20:30</td>
+									<td class="status">
 										<a rel="tooltip" title="Like" class="table-action like" href="javascript:void(0)" title="Like">
 											<i class="fa fa-heart"></i>
 										</a>
@@ -122,10 +122,10 @@
 								<tr>
 									<td colspan=3 class="buffer">10 mins</td>
 								</tr>
-								<tr>
+								<tr class="thread">
 									<td>Nightly retrospective and planning</td>
-									<td>20:40 - 21:00</td>
-									<td>
+									<td class="duration">20:40 - 21:00</td>
+									<td class="status">
 										<a rel="tooltip" title="Like" class="table-action like" href="javascript:void(0)" title="Like">
 											<i class="fa fa-heart"></i>
 										</a>
@@ -155,4 +155,5 @@
 <script type="text/javascript" src="assets/js/bootstrap.js"></script>
 <script type="text/javascript" src="assets/js/bootstrap-table.js"></script>
 <script type="text/javascript" src="assets/js/fresh-bootstrap-table.js"></script>
+<script type="text/javascript" src="assets/js/stars.js"></script>
 </html>
