Finished the timetable template.

--- a/compact-table.html
+++ b/compact-table.html
@@ -36,29 +36,29 @@
 									<td>Go for a run</td>
 									<td class="duration">06:20 - 07:20</td>
 									<td class="status">
-										<a rel="tooltip" title="Like" class="table-action like" href="javascript:void(0)" title="Like">
-											<i class="fa fa-heart"></i>
+										<a rel="tooltip" title="Done" class="table-action done" href="javascript:void(0)" title="Like">
+											<i class="fa fa-check"></i>
 										</a>
 										<a rel="tooltip" title="Edit" class="table-action edit" href="javascript:void(0)" title="Edit">
-											<i class="fa fa-edit"></i>
+											<i class="fa fa-star-half-o"></i>
 										</a>
 										<a rel="tooltip" title="Remove" class="table-action remove" href="javascript:void(0)" title="Remove">
 											<i class="fa fa-remove"></i>
 										</a>
 									</td>
 								</tr>
-								<tr>
-									<td colspan=3 class="buffer">10 mins</td>
+								<tr class="buffer">
+									<td colspan=3>10 mins</td>
 								</tr>
 								<tr class="thread">
 									<td>Take a shower</td>
 									<td class="duration">07:30 - 08:00</td>
 									<td class="status">
-										<a rel="tooltip" title="Like" class="table-action like" href="javascript:void(0)" title="Like">
-											<i class="fa fa-heart"></i>
+										<a rel="tooltip" title="Done" class="table-action done" href="javascript:void(0)" title="Like">
+											<i class="fa fa-check"></i>
 										</a>
 										<a rel="tooltip" title="Edit" class="table-action edit" href="javascript:void(0)" title="Edit">
-											<i class="fa fa-edit"></i>
+											<i class="fa fa-star-half-o"></i>
 										</a>
 										<a rel="tooltip" title="Remove" class="table-action remove" href="javascript:void(0)" title="Remove">
 											<i class="fa fa-remove"></i>
@@ -68,15 +68,15 @@
 								<tr>
 									<td colspan=3 class="buffer">20 mins</td>
 								</tr>
-								<tr class="thread">
+								<tr class="hobby">
 									<td>Commute to work</td>
 									<td class="duration">08:20 - 09:10</td>
 									<td class="status">
-										<a rel="tooltip" title="Like" class="table-action like" href="javascript:void(0)" title="Like">
-											<i class="fa fa-heart"></i>
+										<a rel="tooltip" title="Done" class="table-action done" href="javascript:void(0)" title="Like">
+											<i class="fa fa-check"></i>
 										</a>
 										<a rel="tooltip" title="Edit" class="table-action edit" href="javascript:void(0)" title="Edit">
-											<i class="fa fa-edit"></i>
+											<i class="fa fa-star-half-o"></i>
 										</a>
 										<a rel="tooltip" title="Remove" class="table-action remove" href="javascript:void(0)" title="Remove">
 											<i class="fa fa-remove"></i>
@@ -90,11 +90,11 @@
 									<td>Placeholder for a Weave</td>
 									<td class="duration">09:20 - 16:00</td>
 									<td class="status">
-										<a rel="tooltip" title="Like" class="table-action like" href="javascript:void(0)" title="Like">
-											<i class="fa fa-heart"></i>
+										<a rel="tooltip" title="Done" class="table-action done" href="javascript:void(0)" title="Like">
+											<i class="fa fa-check"></i>
 										</a>
 										<a rel="tooltip" title="Edit" class="table-action edit" href="javascript:void(0)" title="Edit">
-											<i class="fa fa-edit"></i>
+											<i class="fa fa-star-half-o"></i>
 										</a>
 										<a rel="tooltip" title="Remove" class="table-action remove" href="javascript:void(0)" title="Remove">
 											<i class="fa fa-remove"></i>
@@ -108,11 +108,11 @@
 									<td>Placeholder for a Laser Donut Portion</td>
 									<td class="duration">16:30 - 20:30</td>
 									<td class="status">
-										<a rel="tooltip" title="Like" class="table-action like" href="javascript:void(0)" title="Like">
-											<i class="fa fa-heart"></i>
+										<a rel="tooltip" title="Done" class="table-action done" href="javascript:void(0)" title="Like">
+											<i class="fa fa-check"></i>
 										</a>
 										<a rel="tooltip" title="Edit" class="table-action edit" href="javascript:void(0)" title="Edit">
-											<i class="fa fa-edit"></i>
+											<i class="fa fa-star-half-o"></i>
 										</a>
 										<a rel="tooltip" title="Remove" class="table-action remove" href="javascript:void(0)" title="Remove">
 											<i class="fa fa-remove"></i>
@@ -126,11 +126,11 @@
 									<td>Nightly retrospective and planning</td>
 									<td class="duration">20:40 - 21:00</td>
 									<td class="status">
-										<a rel="tooltip" title="Like" class="table-action like" href="javascript:void(0)" title="Like">
-											<i class="fa fa-heart"></i>
+										<a rel="tooltip" title="Done" class="table-action done" href="javascript:void(0)" title="Like">
+											<i class="fa fa-check"></i>
 										</a>
 										<a rel="tooltip" title="Edit" class="table-action edit" href="javascript:void(0)" title="Edit">
-											<i class="fa fa-edit"></i>
+											<i class="fa fa-star-half-o"></i>
 										</a>
 										<a rel="tooltip" title="Remove" class="table-action remove" href="javascript:void(0)" title="Remove">
 											<i class="fa fa-remove"></i>
