--- a/compact-table.html
+++ b/compact-table.html
@@ -36,13 +36,13 @@
 									<td>Go for a run</td>
 									<td class="duration">06:20 - 07:20</td>
 									<td class="status">
-										<a rel="tooltip" title="Done" class="table-action done" href="javascript:void(0)" title="Like">
+										<a rel="tooltip" title="Complete" class="table-action complete" href="javascript:void(0)" title="Like">
 											<i class="fa fa-check"></i>
 										</a>
-										<a rel="tooltip" title="Edit" class="table-action edit" href="javascript:void(0)" title="Edit">
+										<a rel="tooltip" title="Incomplete" class="table-action imcomplete" href="javascript:void(0)" title="Edit">
 											<i class="fa fa-star-half-o"></i>
 										</a>
-										<a rel="tooltip" title="Remove" class="table-action remove" href="javascript:void(0)" title="Remove">
+										<a rel="tooltip" title="Not started" class="table-action not-started" href="javascript:void(0)" title="Remove">
 											<i class="fa fa-remove"></i>
 										</a>
 									</td>
@@ -54,13 +54,13 @@
 									<td>Take a shower</td>
 									<td class="duration">07:30 - 08:00</td>
 									<td class="status">
-										<a rel="tooltip" title="Done" class="table-action done" href="javascript:void(0)" title="Like">
+										<a rel="tooltip" title="Complete" class="table-action complete" href="javascript:void(0)" title="Like">
 											<i class="fa fa-check"></i>
 										</a>
-										<a rel="tooltip" title="Edit" class="table-action edit" href="javascript:void(0)" title="Edit">
+										<a rel="tooltip" title="Incomplete" class="table-action imcomplete" href="javascript:void(0)" title="Edit">
 											<i class="fa fa-star-half-o"></i>
 										</a>
-										<a rel="tooltip" title="Remove" class="table-action remove" href="javascript:void(0)" title="Remove">
+										<a rel="tooltip" title="Not started" class="table-action not-started" href="javascript:void(0)" title="Remove">
 											<i class="fa fa-remove"></i>
 										</a>
 									</td>
@@ -72,13 +72,13 @@
 									<td>Commute to work</td>
 									<td class="duration">08:20 - 09:10</td>
 									<td class="status">
-										<a rel="tooltip" title="Done" class="table-action done" href="javascript:void(0)" title="Like">
+										<a rel="tooltip" title="Complete" class="table-action complete" href="javascript:void(0)" title="Like">
 											<i class="fa fa-check"></i>
 										</a>
-										<a rel="tooltip" title="Edit" class="table-action edit" href="javascript:void(0)" title="Edit">
+										<a rel="tooltip" title="Incomplete" class="table-action imcomplete" href="javascript:void(0)" title="Edit">
 											<i class="fa fa-star-half-o"></i>
 										</a>
-										<a rel="tooltip" title="Remove" class="table-action remove" href="javascript:void(0)" title="Remove">
+										<a rel="tooltip" title="Not started" class="table-action not-started" href="javascript:void(0)" title="Remove">
 											<i class="fa fa-remove"></i>
 										</a>
 									</td>
@@ -90,13 +90,13 @@
 									<td>Placeholder for a Weave</td>
 									<td class="duration">09:20 - 16:00</td>
 									<td class="status">
-										<a rel="tooltip" title="Done" class="table-action done" href="javascript:void(0)" title="Like">
+										<a rel="tooltip" title="Complete" class="table-action complete" href="javascript:void(0)" title="Like">
 											<i class="fa fa-check"></i>
 										</a>
-										<a rel="tooltip" title="Edit" class="table-action edit" href="javascript:void(0)" title="Edit">
+										<a rel="tooltip" title="Incomplete" class="table-action imcomplete" href="javascript:void(0)" title="Edit">
 											<i class="fa fa-star-half-o"></i>
 										</a>
-										<a rel="tooltip" title="Remove" class="table-action remove" href="javascript:void(0)" title="Remove">
+										<a rel="tooltip" title="Not started" class="table-action not-started" href="javascript:void(0)" title="Remove">
 											<i class="fa fa-remove"></i>
 										</a>
 									</td>
@@ -108,13 +108,13 @@
 									<td>Placeholder for a Laser Donut Portion</td>
 									<td class="duration">16:30 - 20:30</td>
 									<td class="status">
-										<a rel="tooltip" title="Done" class="table-action done" href="javascript:void(0)" title="Like">
+										<a rel="tooltip" title="Complete" class="table-action complete" href="javascript:void(0)" title="Like">
 											<i class="fa fa-check"></i>
 										</a>
-										<a rel="tooltip" title="Edit" class="table-action edit" href="javascript:void(0)" title="Edit">
+										<a rel="tooltip" title="Incomplete" class="table-action imcomplete" href="javascript:void(0)" title="Edit">
 											<i class="fa fa-star-half-o"></i>
 										</a>
-										<a rel="tooltip" title="Remove" class="table-action remove" href="javascript:void(0)" title="Remove">
+										<a rel="tooltip" title="Not started" class="table-action not-started" href="javascript:void(0)" title="Remove">
 											<i class="fa fa-remove"></i>
 										</a>
 									</td>
@@ -126,13 +126,13 @@
 									<td>Nightly retrospective and planning</td>
 									<td class="duration">20:40 - 21:00</td>
 									<td class="status">
-										<a rel="tooltip" title="Done" class="table-action done" href="javascript:void(0)" title="Like">
+										<a rel="tooltip" title="Complete" class="table-action complete" href="javascript:void(0)" title="Like">
 											<i class="fa fa-check"></i>
 										</a>
-										<a rel="tooltip" title="Edit" class="table-action edit" href="javascript:void(0)" title="Edit">
+										<a rel="tooltip" title="Incomplete" class="table-action imcomplete" href="javascript:void(0)" title="Edit">
 											<i class="fa fa-star-half-o"></i>
 										</a>
-										<a rel="tooltip" title="Remove" class="table-action remove" href="javascript:void(0)" title="Remove">
+										<a rel="tooltip" title="Not started" class="table-action not-started" href="javascript:void(0)" title="Remove">
 											<i class="fa fa-remove"></i>
 										</a>
 									</td>
